Sun Sep 11 13:50:41 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* macros.c (c_macro): Fix comment.
	* main.c (main): Unbuffered stdout for DEBUG builds.

Sun Sep 11 13:39:32 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* lex.c (Lex_SkipDefiningLabel): Add.
	* lex.h (Lex_SkipDefiningLabel): Likewise.
	* whileif.c (if_skip, while_skip): Don't define local labels when
	skipping if/while bodies.

Sun Sep 11 13:33:06 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* local.h (Local_CurROUTId): Remove.
	(Local_GetCurROUTId, Local_DumpAll): Add.
	* local.c: Likewise.
	(Local_PrepareForPhase): Follow Local_CurROUTId removal and use
	Local_GetCurROUTId.
	(c_rout): Likewise.  Initialise routPos::next.
	* lex.c (Lex_ReadLocalLabel, Lex_MakeLocalLabel,Lex_GetDefiningLabel):
	Follow Local_CurROUTId removal and use Local_GetCurROUTId.

Sun Sep 11 12:11:22 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* filestack.c (FS_PushFilePObject): Add return value.
	* filestack.h (FS_PushFilePObject): Likewise.
	* commands.c (c_get, c_lnk): Check return value of
	FS_PushFilePObject.
	(c_info): Only report during phase one.

Sun Sep 11 12:04:11 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* symbol.c (Symbol_CreateSymbolOut): Update local label error.

Sat Sep 10 10:51:37 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* input.c (inputEnvSub): When cross-compiled, substitute $ into _
	when initial environment variable retrieve didn't work.

Sun Aug  7 18:39:49 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* lexAcorn.c (lexAcornUnop, lexAcornBinop): Don't consume characters
	which weren't expected.
	* lex.c (lexGetPrim, lexGetBinop): Return : back to input stream if
	tokenizing failed.

Sun Aug  7 17:30:45 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* code.c (Code_EvalLowest): Don't call operator size for non-defined
	symbols.
	* eval.c (evalUnop): Op_size: Remove implementation for non-defined
	symbols.
	* regression/tests_pass/operator_questionmark.s: Add tests.